--- a/style.css
+++ b/style.css
@@ -3,44 +3,49 @@
     padding: 0;
     font-family: Arial;
 }
+html{
+font-size: 11.5px;
+font-size: 62.5%;
+
+}
 
 
 .raul {
     color: rgb(15, 15, 124);
-    font-size: 25px;
+    font-size: 2.5rem;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
 
 }
 .iqbal
 {
     font-weight: 500;
-    margin-left: -4px;
-    font-size: 25px;
+    margin-left: -0.4rem;
+    font-size: 2.5rem;
     color: rgb(22, 22, 187);
  }
 
     
     
     .navbar{
-        width: 1200px;
-        height: 75px;
+        width: 120rem;
+        height: 7.5rem;
         margin: auto;
-        margin-top: 10px;
+        margin-top: 1rem;
     }
     
     .icon{
-        width: 200px;
+        width: 20rem;
         float: left;
-        margin-top: 30px;
+        margin-top: 3rem;
        
     }
  
     
     .menu{
-        width: 900px;
+        width: 90rem;
         float: right;
-        height: 70px;
+        height: 7rem;
         display: flex;
     }
     
@@ -54,96 +59,100 @@
     
     ul li{
         list-style: none;
-        margin-left: 50px;
-        margin-top: 15px;
-        font-size: 19px;
+        margin-left: 5rem;
+        margin-top: 1.5rem;
+        font-size: 1.9rem;
         color: black;
-        letter-spacing: 1.5px;
+        letter-spacing: 0.15rem;
     }
     
     ul  {
         text-decoration: none; font-family: Arial;
-        margin-left: 390px;
+        margin-left: 39rem;
         color: black;
     }
          
      li{
      color: black;
      font-weight: 500;
-     letter-spacing: 1px;
+     letter-spacing: 0.1rem;
     }
  .btn{
-        width: 140px;
-        height: 45px;
+        width: 14rem;
+        height: 4.5rem;
         background: rgb(109, 138, 235);
         color: white;
-        margin-left :80px;
-        border-radius: 8px ;
-        margin-top: 10px;
-        font-size: 17px;
-        padding-top: 1px;
+        margin-left :8rem;
+        border-radius: 0.8rem ;
+        margin-top: 1rem;
+        font-size: 1.7rem;
+        padding-top: 0.1rem;
         font-weight: bold ;
-        letter-spacing: 1.5px;
+        letter-spacing: 0.15rem;
         border-color: transparent;
     }
     .gray{
-        width: 130px;
-        height :55px;
+        width: 13rem;
+        height :5.5rem;
         color: rgb(190, 190, 190);
-        border: 10px;
+        border: 1rem;
         background-color: rgb(231, 227, 227);
-        margin-top: 13px; 
+        margin-top: 1.3rem; 
     }
     .content-main{
         display: flex;
-        margin-top: 100px;
-        margin-left: 150px;
+        margin-top: 10rem;
+        margin-left: 15rem;
     }
     .hi{
         color:rgb(12, 12, 100);
-        font-size: 25px;
+        font-size: 2.7rem;
         font-weight: 100;
         font-family: Arial;
-        letter-spacing: 1px;
+        letter-spacing: 0.1rem;
     }
     .name 
     
     { 
         color: rgb(12, 12, 100);
-        margin-top: 12px;
+        margin-top: 1.2rem;
         font-weight: 2500;
-        letter-spacing: 1px;
-        word-spacing: 1px;
+        letter-spacing: 0.1rem;
+        word-spacing: 0.1rem;
+        font-size: 3rem;
         
     }
     .skill{
         color: rgb(12, 12, 100);
         font-weight: 2500;
-        letter-spacing: 1px;
-        word-spacing: 1px;
-        margin-top: -7px;
+        letter-spacing: 0.1rem;
+        word-spacing: 0.1rem;
+        margin-top: -0.7rem;
+        font-size: 2.7rem;
     }
     .content2{
-        margin-top: 35px;
-        letter-spacing: 1px;
-        word-spacing: 1px;
+        margin-top: 3.5rem;
+        letter-spacing: 0.1rem;
+        word-spacing: 0.1rem;
+        font-size: 1.5rem;
     }
     .img1{
-        width: 350px;
-        margin-left: 250px;
-        margin-top: -50px;
+        width: 35rem;
+        margin-left: 25rem;
+        margin-top: -5rem;
     }
     .content3{
-        margin-top: 80px;
+        margin-top: 8rem;
         justify-content: center;
-        margin-left: 670px;
+        margin-left: 67rem;
         color: rgb(12, 12, 100);
 
     }
     .additional{
         font-weight:100 ;
         color: rgb(43, 78, 194);
-        letter-spacing: 1.3px;
+        letter-spacing: 0.13rem;
+        font-size: 2rem;
 
     }
    .passion {
@@ -152,56 +161,61 @@
    }
    .f{
     display: flex; 
-    margin-top: 100px;
-    margin-left: 310px;
+    margin-top: 10rem;
+    margin-left: 31rem;
    }
    .developer, .designer{
     font-weight:100;
 
    }
    .set2 , .set1 , .set3{
-    word-spacing: 1px;
-    letter-spacing: 1px;
+    word-spacing: 0.1rem;
+    letter-spacing: 0.1rem;
     box-shadow: 1px 1px 18px gray;
-    width: 260px;
-    border-radius: 10px 10px 10px 10px;
+    width: 26rem;
+    border-radius: 1rem 1rem 1rem 1rem;
   
     
    }
    .set2{
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-left: 9rem;
+    margin-right: 9rem;
    }
    .img2, .img3, .img4 {
-    width: 100px;
-    height: 160px;
-    padding-top: 10px;
-    padding-left: 15px;
+    width: 10rem;
+    height: 16rem;
+    padding-top: 1rem;
+    padding-left: 1.5rem;
    }   
    .data2{
-    padding-left: 13px;
-    padding-bottom: 10px;
+
+    padding-bottom: 1rem;
+    font-size: 1.4rem;
+    padding-left: 2.3rem;
    }
 
-   
+  
 .data2
 {
-   padding-left: 18px;
+  
 }
-.data1   {
-    padding-left:20px
+.data1   
+{
+    padding-left:4rem;
+    font-size: 1.4rem;
 }
 .data3{
-    padding-left: 25px;
+    padding-left: 4rem;
+    font-size: 1.4rem;
 }
 .saas ,.saas2 ,.Figma{
-    margin-top: 4px;
+    margin-top: 0.4rem;
 }
 .front2{
-    padding-left: 10px;
+    padding-left: 1rem;
 }
 .front3{
-    padding-left: 20px;
+    padding-left: 2rem;
 
 
 }
@@ -210,36 +224,52 @@
     
         font-weight:100 ;
         color: rgb(43, 78, 194);
-        letter-spacing: 1.3px;
+        letter-spacing: 0.13rem;
+        font-size: 2rem;
 
     }
    .portfolio {
     font-weight:750;
     color: rgb(25, 25, 102);
-    padding-left: 10px;
+    padding-left: 1rem;
 }
 .content4{
-    padding-left: 720px;
-   margin-top: 100px;
+    padding-left: 72rem;
+   margin-top: 10rem;
 }
 .content5{
     display:flex
 
 }
 .content5{
-    margin-top: 70px;
+    margin-top: 7.0rem;
     justify-content: center;
+    padding-left: 4rem;
     
 }
 .github, .Instagram{
-    margin-top: 13px;
-    padding-left: 12px;
+    margin-top: 1.3rem;
+    padding-left: 1.2rem;
     font-weight: 100;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
+    font-size: 2rem;
 }
 .Email, .Telp{
-    padding-left: 47px;
+    padding-left: 4.7rem;
     font-weight: 100;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
+    font-size: 2rem;
 }
 
+@media(max-width:998px){
+
+    navbar-mobile{
+        
+
+    }
+}
+@media(max-width:760px){
+    html{
+        font-size: 45%;
+    }
+}
