--- a/style.css
+++ b/style.css
@@ -185,7 +185,12 @@ font-size: 62.5%;
     width: 10rem;
     height: 16rem;
     padding-top: 1rem;
+    
     padding-left: 1.5rem;
+    height: auto;
+    width: auto;
+  
+
    }   
    .data2{
 
@@ -238,13 +243,14 @@ font-size: 62.5%;
    margin-top: 10rem;
 }
 .content5{
-    display:flex
+    display:flex;
+
 
 }
 .content5{
     margin-top: 7.0rem;
-    justify-content: center;
-    padding-left: 4rem;
+ 
+    margin-left: 3.5rem;
     
 }
 .github, .Instagram{
@@ -261,15 +267,11 @@ font-size: 62.5%;
     font-size: 2rem;
 }
 
-@media(max-width:998px){
 
-    navbar-mobile{
-        
+@media (max-width:600px )
 
-    }
-}
-@media(max-width:760px){
-    html{
-        font-size: 45%;
+{
+    main{
+        flex-direction: column;
     }
 }
